--- a/index.html
+++ b/index.html
@@ -58,12 +58,18 @@
 <p>wat letterlijk vertaald 'geen zorgen' betekent in het Swahili. De uitdrukking wordt in het lied gepresenteerd als</p>
 <p> de 'probleemvrije filosofie' van Timon en Pumbaa, die Simba aanmoedigen om zijn verleden los te laten en zonder angst verder te leven. </p>
 
-
 <p></p>
 <iframe src="https://giphy.com/embed/Ms2YW90Qnyv4I" width="480" height="293"
 style="" frameBorder="0" class="giphy-embed"
 allowFullScreen></iframe><p><a href="https://giphy.com/gifs/disney-other-the-lion-king-Ms2YW90Qnyv4I"></a></p>
 
+<h2>The Circle Of Life</h2>
+<p>In The Lion King laat The Circle of Life zien hoe alles in de natuur verbonden is.</p>
+<p> Van Simba tot de kleinste dieren, iedereen speelt een rol in het leven en de kringloop gaat altijd door.</p>
+
+<iframe width="460" height="215"
+src="https://www.youtube.com/embed/jieitEw_ESQ?si=cOHT7mKe6NWw9ux0" >
+</iframe>
 
 <h2>De trailer</h2>
 <p>De officiële trailer van The Lion King geeft je alvast een indruk van dit epische verhaal.</p>
@@ -72,6 +78,7 @@ allowFullScreen></iframe><p><a href="https://giphy.com/gifs/disney-other-the-lio
 src="https://www.youtube.com/embed/lFzVJEksoDY?si=qUhQ7Q2dyygd124r" >
 </iframe>
 
+<br></br>
 
 <br></br>
 <button>Terug omhoog</button>
